Полный рефакторинг проекта