@@ -1,5 +1,6 @@
 package org.dev.powermarket.service;
 
+import lombok.RequiredArgsConstructor;
 import org.dev.powermarket.domain.*;
 import org.dev.powermarket.domain.enums.NotificationType;
 import org.dev.powermarket.domain.enums.RentalRequestStatus;
@@ -8,6 +9,7 @@ import org.dev.powermarket.repository.*;
 import org.dev.powermarket.security.entity.User;
 import org.dev.powermarket.security.repository.AuthorizedUserRepository;
 import org.dev.powermarket.service.dto.*;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,40 +21,23 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class RentalRequestService {
 
     private final RentalRequestRepository rentalRequestRepository;
     private final ServiceRepository serviceRepository;
-    private final ServiceAvailabilityRepository availabilityRepository;
     private final AuthorizedUserRepository userRepository;
     private final NotificationRepository notificationRepository;
     private final RentalService rentalService;
     private final RentalRepository rentalRepository;
     private final ChatRepository chatRepository;
-
-    public RentalRequestService(RentalRequestRepository rentalRequestRepository,
-                                ServiceRepository serviceRepository,
-                                ServiceAvailabilityRepository availabilityRepository,
-                                AuthorizedUserRepository userRepository,
-                                NotificationRepository notificationRepository,
-                                RentalService rentalService,
-                                RentalRepository rentalRepository,
-                                ChatRepository chatRepository) {
-        this.rentalRequestRepository = rentalRequestRepository;
-        this.serviceRepository = serviceRepository;
-        this.availabilityRepository = availabilityRepository;
-        this.userRepository = userRepository;
-        this.notificationRepository = notificationRepository;
-        this.rentalService = rentalService;
-        this.rentalRepository = rentalRepository;
-        this.chatRepository = chatRepository;
-    }
+    private final CapacityManagementService capacityManagementService;
 
     @Transactional
     public RentalRequestDto createRentalRequest(String email, CreateRentalRequestRequest request) {
         User tenant = userRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
-        System.out.println(tenant);
+
         if (tenant.getRole() != Role.TENANT) {
             throw new AccessDeniedException("Only tenants can create rental requests");
         }
@@ -64,17 +49,19 @@ public class RentalRequestService {
             throw new IllegalArgumentException("Service is not active");
         }
 
-        long days = request.getEndDate().toEpochDay() - request.getStartDate().toEpochDay() + 1;
-
-        // Check if dates are available
-        boolean isAvailable = availabilityRepository.isDateRangeAvailable(
-                service, request.getStartDate(), request.getEndDate(), days);
+        boolean isAvailable = capacityManagementService.isCapacityAvailable(
+                service.getId(),
+                request.getStartDate(),
+                request.getEndDate(),
+                request.getCapacityNeeded()
+        );
 
         if (!isAvailable) {
-            throw new IllegalArgumentException("Selected dates are not available");
+            throw new IllegalArgumentException("Not enough capacity available for selected dates");
         }
 
         // Calculate total price
+        long days = request.getEndDate().toEpochDay() - request.getStartDate().toEpochDay() + 1;
         BigDecimal totalPrice = service.getPricePerDay().multiply(BigDecimal.valueOf(days));
 
         RentalRequest rentalRequest = new RentalRequest();
@@ -89,6 +76,7 @@ public class RentalRequestService {
 
         RentalRequest saved = rentalRequestRepository.save(rentalRequest);
 
+        // Create rental and chat (without capacity reservation - that happens on confirmation)
         Rental rental = new Rental();
         rental.setRentalRequest(saved);
         rental.setService(service);
@@ -97,11 +85,13 @@ public class RentalRequestService {
         rental.setStartDate(request.getStartDate());
         rental.setEndDate(request.getEndDate());
         rental.setTotalPrice(totalPrice);
+        rental.setCapacityNeeded(request.getCapacityNeeded());
         rental.setSupplierConfirmed(false);
         rental.setTenantConfirmed(false);
         rental.setIsActive(true);
 
         Rental savedRental = rentalRepository.save(rental);
+        saved.setRental(savedRental);
 
         Chat chat = new Chat();
         chat.setRental(savedRental);
@@ -142,7 +132,7 @@ public class RentalRequestService {
         }
 
         if (request.getApproved()) {
-            rentalRequest.setStatus(RentalRequestStatus.CONFIRMED);
+            rentalRequest.setStatus(RentalRequestStatus.IN_CONTRACT);
             rentalRequest.setRespondedAt(Instant.now());
 
             // Create rental and chat
@@ -183,15 +173,15 @@ public class RentalRequestService {
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
         if (user.getRole() == Role.TENANT) {
-            return rentalRequestRepository.findByTenant(user, org.springframework.data.domain.Pageable.unpaged())
+            return rentalRequestRepository.findByTenant(user, Pageable.unpaged())
                     .stream()
                     .map(this::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
         } else if (user.getRole() == Role.SUPPLIER) {
-            return rentalRequestRepository.findBySupplier(user, org.springframework.data.domain.Pageable.unpaged())
+            return rentalRequestRepository.findBySupplier(user, Pageable.unpaged())
                     .stream()
                     .map(this::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return List.of();
@@ -202,10 +192,10 @@ public class RentalRequestService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
-        return rentalRequestRepository.findBySupplier(user, org.springframework.data.domain.Pageable.unpaged())
+        return rentalRequestRepository.findBySupplier(user, Pageable.unpaged())
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -213,10 +203,10 @@ public class RentalRequestService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
-        return rentalRequestRepository.findByTenant(user, org.springframework.data.domain.Pageable.unpaged())
+        return rentalRequestRepository.findByTenant(user, Pageable.unpaged())
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -268,6 +258,10 @@ public class RentalRequestService {
         dto.setCreatedAt(request.getCreatedAt());
         dto.setRespondedAt(request.getRespondedAt());
         dto.setCapacityNeeded(request.getCapacityNeeded());
+        if (request.getRental() != null) {
+            dto.setRentalId(request.getRental().getId());
+        }
+
         return dto;
     }
 }
