@@ -1,15 +1,16 @@
 package org.dev.powermarket.service;
 
+import lombok.RequiredArgsConstructor;
 import org.dev.powermarket.domain.Service;
-import org.dev.powermarket.domain.ServiceAvailability;
+import org.dev.powermarket.domain.ServiceAvailabilityPeriod;
+import org.dev.powermarket.repository.ServiceAvailabilityPeriodRepository;
 import org.dev.powermarket.security.entity.User;
 import org.dev.powermarket.domain.enums.Role;
 import org.dev.powermarket.domain.enums.ServiceCategory;
-import org.dev.powermarket.repository.ServiceAvailabilityRepository;
 import org.dev.powermarket.repository.ServiceRepository;
 import org.dev.powermarket.integration.search.MlSearchClient;
 import org.dev.powermarket.integration.search.MlSearchProperties;
-import java.util.stream.Collectors;
+
 import java.util.Comparator;
 import java.time.LocalDate;
 
@@ -24,23 +25,15 @@ import java.util.List;
 import java.util.UUID;
 
 @org.springframework.stereotype.Service
+@RequiredArgsConstructor
 public class ServiceService {
 
     private final ServiceRepository serviceRepository;
-    private final ServiceAvailabilityRepository availabilityRepository;
+    private final ServiceAvailabilityPeriodRepository availabilityPeriodRepository;
     private final AuthorizedUserRepository userRepository;
     private final MlSearchClient mlSearchClient;
     private final MlSearchProperties mlSearchProperties;
 
-    public ServiceService(ServiceRepository serviceRepository,
-                          ServiceAvailabilityRepository availabilityRepository,
-                          AuthorizedUserRepository userRepository, MlSearchClient mlSearchClient, MlSearchProperties mlSearchProperties) {
-        this.serviceRepository = serviceRepository;
-        this.mlSearchClient = mlSearchClient;
-        this.mlSearchProperties = mlSearchProperties;
-        this.availabilityRepository = availabilityRepository;
-        this.userRepository = userRepository;
-    }
 
     @Transactional
     public ServiceDto createService(String email, CreateServiceRequest request) {
@@ -57,9 +50,8 @@ public class ServiceService {
         service.setCategory(request.getCategory());
         service.setPricePerDay(request.getPricePerDay());
         service.setLocation(request.getLocation());
-        service.setCapacity(request.getCapacity());
+        service.setMaxCapacity(request.getMaxCapacity());
         service.setTechnicalSpecs(request.getTechnicalSpecs());
-        service.setAvailableCapacity(request.getCapacity());
         service.setSupplier(supplier);
         service.setIsActive(true);
 
@@ -67,15 +59,13 @@ public class ServiceService {
 
         if (request.getAvailabilities() != null) {
             for (CreateServiceRequest.AvailabilityPeriod period : request.getAvailabilities()) {
-                LocalDate currentDate = period.getStartDate();
-                while (!currentDate.isAfter(period.getEndDate())) {
-                    ServiceAvailability availability = new ServiceAvailability();
-                    availability.setService(saved);
-                    availability.setAvailableDate(currentDate);
-                    availability.setIsReserved(false);
-                    availabilityRepository.save(availability);
-                    currentDate = currentDate.plusDays(1);
-                }
+                ServiceAvailabilityPeriod availabilityPeriod = new ServiceAvailabilityPeriod();
+                availabilityPeriod.setService(saved);
+                availabilityPeriod.setStartDate(period.getStartDate());
+                availabilityPeriod.setEndDate(period.getEndDate());
+                availabilityPeriod.setTotalCapacity(saved.getMaxCapacity());
+
+                availabilityPeriodRepository.save(availabilityPeriod);
             }
         }
 
@@ -98,7 +88,7 @@ public class ServiceService {
         if (request.getDescription() != null) service.setDescription(request.getDescription());
         if (request.getPricePerDay() != null) service.setPricePerDay(request.getPricePerDay());
         if (request.getLocation() != null) service.setLocation(request.getLocation());
-        if (request.getCapacity() != null) service.setCapacity(request.getCapacity());
+        if (request.getMaxCapacity() != null) service.setMaxCapacity(request.getMaxCapacity());
         if (request.getTechnicalSpecs() != null) service.setTechnicalSpecs(request.getTechnicalSpecs());
         if (request.getActive() != null) service.setIsActive(request.getActive());
 
@@ -113,14 +103,14 @@ public class ServiceService {
         if (keyword != null && !keyword.isBlank() && mlSearchProperties != null && mlSearchProperties.isEnabled()) {
             var ids = mlSearchClient.searchServiceIds(keyword, pageable.getPageNumber() + 1, pageable.getPageSize());
             if (!ids.isEmpty()) {
-                var list = serviceRepository.findByIdInAndIsActiveTrue(ids);
+                var list = serviceRepository.findByIdInAndIsActiveTrueAndDeletedFalse(ids);
                 // Preserve ML order
                 var order = new java.util.HashMap<java.util.UUID, Integer>();
                 for (int i = 0; i < ids.size(); i++) order.put(ids.get(i), i);
                 var sorted = list.stream()
                         .sorted(Comparator.comparingInt(s -> order.getOrDefault(s.getId(), Integer.MAX_VALUE)))
                         .map(this::toDto)
-                        .collect(Collectors.toList());
+                        .toList();
                 // Create Page
                 return new org.springframework.data.domain.PageImpl<>(sorted, pageable, sorted.size());
             }
@@ -132,9 +122,9 @@ public class ServiceService {
         if (keyword != null && !keyword.isBlank()) {
             services = serviceRepository.searchServices(keyword, pageable);
         } else if (category != null) {
-            services = serviceRepository.findByIsActiveTrueAndCategory(category, pageable);
+            services = serviceRepository.findByIsActiveTrueAndCategoryAndDeletedFalse(category, pageable);
         } else {
-            services = serviceRepository.findByIsActiveTrue(pageable);
+            services = serviceRepository.findByIsActiveTrueAndDeletedFalse(pageable);
         }
 
         return services.map(this::toDto);
@@ -152,9 +142,9 @@ public class ServiceService {
         User supplier = userRepository.findByEmail(email)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
-        return serviceRepository.findBySupplierAndIsActiveTrue(supplier).stream()
+        return serviceRepository.findBySupplierAndIsActiveTrueAndDeletedFalse(supplier).stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -169,7 +159,9 @@ public class ServiceService {
             throw new AccessDeniedException("You can only delete your own services");
         }
 
-        serviceRepository.delete(service);
+        service.setIsActive(false);
+        service.setDeleted(true);
+        serviceRepository.save(service);
     }
 
     private ServiceDto toDto(Service service) {
@@ -180,8 +172,9 @@ public class ServiceService {
         dto.setCategory(service.getCategory());
         dto.setPricePerDay(service.getPricePerDay());
         dto.setLocation(service.getLocation());
-        dto.setTotalCapacity(service.getCapacity());
-        dto.setTotalCapacityUnits(service.getTotalCapacityUnits());
+
+        dto.setMaxCapacity(service.getMaxCapacity());
+
         dto.setTechnicalSpecs(service.getTechnicalSpecs());
         dto.setSupplierId(service.getSupplier().getId());
         dto.setSupplierName(service.getSupplier().getFullName());
@@ -189,31 +182,13 @@ public class ServiceService {
         dto.setAverageRating(service.getAverageRating());
         dto.setTotalReviews(service.getTotalReviews());
         dto.setCreatedAt(service.getCreatedAt());
-        dto.setAvailableCapacity(service.getAvailableCapacity());
-
-        List<ServiceAvailability> freeAvailabilities = availabilityRepository
-                .findByServiceAndIsReservedFalse(service);
-        dto.setAvailableCapacityUnits(freeAvailabilities.isEmpty() ? 0 : service.getTotalCapacityUnits());
-
-        List<ServiceAvailabilityDto> availabilities = freeAvailabilities.stream()
-                .map(this::toAvailabilityDto)
-                .collect(Collectors.toList());
-        dto.setAvailabilities(availabilities);
 
         return dto;
-    }
-
-    private ServiceAvailabilityDto toAvailabilityDto(ServiceAvailability availability) {
-        return new ServiceAvailabilityDto(
-                availability.getId(),
-                availability.getAvailableDate(),
-                availability.getIsReserved()
-        );
     }
 
     public List<ServiceDto> getAllServices() {
         return serviceRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
